Fix broken entity localisations

--- a/src/main/resources/assets/wizardry/lang/en_US.lang
+++ b/src/main/resources/assets/wizardry/lang/en_US.lang
@@ -148,66 +148,66 @@ item.wizardry:spectral_chestplate.name=Spectral Chestplate
 item.wizardry:spectral_leggings.name=Spectral Leggings
 item.wizardry:spectral_boots.name=Spectral Boots
 
-entity.wizardry.summonedcreature.nameplate=%1$s's %2$s
-entity.wizardry.summonedcreature.nameplate_fallback=Someone's %1$s
+entity.wizardry:summonedcreature.nameplate=%1$s's %2$s
+entity.wizardry:summonedcreature.nameplate_fallback=Someone's %1$s
 
-entity.wizardry.zombie_minion.name=Zombie
-entity.wizardry.skeleton_minion.name=Skeleton
-entity.wizardry.spider_minion.name=Spider
-entity.wizardry.blaze_minion.name=Blaze
-entity.wizardry.ice_wraith.name=Ice Wraith
-entity.wizardry.lightning_wraith.name=Lightning Wraith
-entity.wizardry.shadow_wraith.name=Shadow Wraith
-entity.wizardry.spirit_wolf.name=Spirit Wolf
-entity.wizardry.spirit_horse.name=Spirit Horse
-entity.wizardry.ice_giant.name=Ice Giant
-entity.wizardry.phoenix.name=Phoenix
-entity.wizardry.wizard.name=Wizard
-entity.wizardry.magic_slime.name=Magical Slime
-entity.wizardry.silverfish_minion.name=Silverfish
-entity.wizardry.storm_elemental.name=Storm Elemental
-entity.wizardry.evil_wizard.name=Wizard
-entity.wizardry.decoy.name=Decoy
+entity.wizardry:zombie_minion.name=Zombie
+entity.wizardry:skeleton_minion.name=Skeleton
+entity.wizardry:spider_minion.name=Spider
+entity.wizardry:blaze_minion.name=Blaze
+entity.wizardry:ice_wraith.name=Ice Wraith
+entity.wizardry:lightning_wraith.name=Lightning Wraith
+entity.wizardry:shadow_wraith.name=Shadow Wraith
+entity.wizardry:spirit_wolf.name=Spirit Wolf
+entity.wizardry:spirit_horse.name=Spirit Horse
+entity.wizardry:ice_giant.name=Ice Giant
+entity.wizardry:phoenix.name=Phoenix
+entity.wizardry:wizard.name=Wizard
+entity.wizardry:magic_slime.name=Magical Slime
+entity.wizardry:silverfish_minion.name=Silverfish
+entity.wizardry:storm_elemental.name=Storm Elemental
+entity.wizardry:evil_wizard.name=Wizard
+entity.wizardry:decoy.name=Decoy
 
-entity.wizardry.magic_missile.name=Magic
-entity.wizardry.arc.name=Magic
-entity.wizardry.spark_bomb.name=Magic
-entity.wizardry.ice_shard.name=Magic
-entity.wizardry.firebomb.name=Magic
-entity.wizardry.poison_bomb.name=Magic
-entity.wizardry.force_orb.name=Magic
-entity.wizardry.spark.name=Magic
-entity.wizardry.darkness_orb.name=Magic
-entity.wizardry.fire_sigil.name=Magic
-entity.wizardry.frost_sigil.name=Magic
-entity.wizardry.lightning_sigil.name=Magic
-entity.wizardry.lightning_arrow.name=Magic
-entity.wizardry.firebolt.name=Magic
-entity.wizardry.ice_charge.name=Magic
-entity.wizardry.force_arrow.name=Magic
-entity.wizardry.dart.name=Magic
-entity.wizardry.lightning_disc.name=Magic
-entity.wizardry.thunderbolt.name=Magic
-entity.wizardry.decay.name=Magic
-entity.wizardry.ice_lance.name=Magic
-entity.wizardry.smoke_bomb.name=Magic
-entity.wizardry.ice_spike.name=Magic
+entity.wizardry:magic_missile.name=Magic
+entity.wizardry:arc.name=Magic
+entity.wizardry:spark_bomb.name=Magic
+entity.wizardry:ice_shard.name=Magic
+entity.wizardry:firebomb.name=Magic
+entity.wizardry:poison_bomb.name=Magic
+entity.wizardry:force_orb.name=Magic
+entity.wizardry:spark.name=Magic
+entity.wizardry:darkness_orb.name=Magic
+entity.wizardry:fire_sigil.name=Magic
+entity.wizardry:frost_sigil.name=Magic
+entity.wizardry:lightning_sigil.name=Magic
+entity.wizardry:lightning_arrow.name=Magic
+entity.wizardry:firebolt.name=Magic
+entity.wizardry:ice_charge.name=Magic
+entity.wizardry:force_arrow.name=Magic
+entity.wizardry:dart.name=Magic
+entity.wizardry:lightning_disc.name=Magic
+entity.wizardry:thunderbolt.name=Magic
+entity.wizardry:decay.name=Magic
+entity.wizardry:ice_lance.name=Magic
+entity.wizardry:smoke_bomb.name=Magic
+entity.wizardry:ice_spike.name=Magic
 
-entity.wizardry.black_hole.name=Black Hole
-entity.wizardry.shield.name=Shield
-entity.wizardry.meteor.name=Meteor
-entity.wizardry.blizzard.name=Blizzard
-entity.wizardry.bubble.name=Bubble
-entity.wizardry.tornado.name=Tornado
-entity.wizardry.lightning_hammer.name=Lightning Hammer
-entity.wizardry.arrow_rain.name=Arrow Rain
-entity.wizardry.healing_aura.name=Healing Aura
-entity.wizardry.forcefield.name=Forcefield
-entity.wizardry.ring_of_fire.name=Ring of Fire
-entity.wizardry.earthquake.name=Earthquake
-entity.wizardry.falling_grass.name=Falling Grass
-entity.wizardry.hailstorm.name=Hailstorm
-entity.wizardry.lightning_pulse.name=Lightning Pulse
+entity.wizardry:black_hole.name=Black Hole
+entity.wizardry:shield.name=Shield
+entity.wizardry:meteor.name=Meteor
+entity.wizardry:blizzard.name=Blizzard
+entity.wizardry:bubble.name=Bubble
+entity.wizardry:tornado.name=Tornado
+entity.wizardry:lightning_hammer.name=Lightning Hammer
+entity.wizardry:arrow_rain.name=Arrow Rain
+entity.wizardry:healing_aura.name=Healing Aura
+entity.wizardry:forcefield.name=Forcefield
+entity.wizardry:ring_of_fire.name=Ring of Fire
+entity.wizardry:earthquake.name=Earthquake
+entity.wizardry:falling_grass.name=Falling Grass
+entity.wizardry:hailstorm.name=Hailstorm
+entity.wizardry:lightning_pulse.name=Lightning Pulse
 
 itemGroup.wizardry=Wizardry
 itemGroup.wizardryspells=Spells
