--- a/src/main/resources/assets/wizardry/lang/ru_RU.lang
+++ b/src/main/resources/assets/wizardry/lang/ru_RU.lang
@@ -132,53 +132,53 @@ item.wizardry:wizard_boots_healing.name=Ботинки Целителя
 
 item.wizardry:spawn_wizard.name=Спаун Волшебника
 
-entity.wizardry.zombie_minion.name=Зомби
-entity.wizardry.skeleton_minion.name=Скелет
-entity.wizardry.spider_minion.name=Паук
-entity.wizardry.blaze_minion.name=Блейз
-entity.wizardry.ice_wraith.name=Ледяной Призрак
-entity.wizardry.lightning_wraith.name=Штормовой Призрак
-entity.wizardry.shadow_wraith.name=Теневой Призрак
-entity.wizardry.spirit_wolf.name=Призрачный Волк
-entity.wizardry.spirit_horse.name=Призрачная Лошадь
-entity.wizardry.ice_giant.name=Ледяной Гигант
-entity.wizardry.phoenix.name=Феникс
-entity.wizardry.wizard.name=Волшебник
-entity.wizardry.magic_slime.name=Магический Слизень
-entity.wizardry.silverfish_minion.name=Чешуйница
+entity.wizardry:zombie_minion.name=Зомби
+entity.wizardry:skeleton_minion.name=Скелет
+entity.wizardry:spider_minion.name=Паук
+entity.wizardry:blaze_minion.name=Блейз
+entity.wizardry:ice_wraith.name=Ледяной Призрак
+entity.wizardry:lightning_wraith.name=Штормовой Призрак
+entity.wizardry:shadow_wraith.name=Теневой Призрак
+entity.wizardry:spirit_wolf.name=Призрачный Волк
+entity.wizardry:spirit_horse.name=Призрачная Лошадь
+entity.wizardry:ice_giant.name=Ледяной Гигант
+entity.wizardry:phoenix.name=Феникс
+entity.wizardry:wizard.name=Волшебник
+entity.wizardry:magic_slime.name=Магический Слизень
+entity.wizardry:silverfish_minion.name=Чешуйница
 
-entity.wizardry.magic_missile.name=Магия
-entity.wizardry.arc.name=Магия
-entity.wizardry.spark_bomb.name=Магия
-entity.wizardry.ice_shard.name=Магия
-entity.wizardry.firebomb.name=Магия
-entity.wizardry.poison_bomb.name=Магия
-entity.wizardry.force_orb.name=Магия
-entity.wizardry.spark.name=Магия
-entity.wizardry.darkness_orb.name=Магия
-entity.wizardry.fire_sigil.name=Магия
-entity.wizardry.frost_sigil.name=Магия
-entity.wizardry.lightning_sigil.name=Магия
-entity.wizardry.lightning_arrow.name=Магия
-entity.wizardry.firebolt.name=Магия
-entity.wizardry.ice_charge.name=Магия
-entity.wizardry.force_arrow.name=Магия
-entity.wizardry.dart.name=Магия
-entity.wizardry.lightning_disc.name=Магия
-entity.wizardry.thunderbolt.name=Магия
-entity.wizardry.decay.name=Магия
+entity.wizardry:magic_missile.name=Магия
+entity.wizardry:arc.name=Магия
+entity.wizardry:spark_bomb.name=Магия
+entity.wizardry:ice_shard.name=Магия
+entity.wizardry:firebomb.name=Магия
+entity.wizardry:poison_bomb.name=Магия
+entity.wizardry:force_orb.name=Магия
+entity.wizardry:spark.name=Магия
+entity.wizardry:darkness_orb.name=Магия
+entity.wizardry:fire_sigil.name=Магия
+entity.wizardry:frost_sigil.name=Магия
+entity.wizardry:lightning_sigil.name=Магия
+entity.wizardry:lightning_arrow.name=Магия
+entity.wizardry:firebolt.name=Магия
+entity.wizardry:ice_charge.name=Магия
+entity.wizardry:force_arrow.name=Магия
+entity.wizardry:dart.name=Магия
+entity.wizardry:lightning_disc.name=Магия
+entity.wizardry:thunderbolt.name=Магия
+entity.wizardry:decay.name=Магия
 
-entity.wizardry.black_hole.name=Чёрная Дыра
-entity.wizardry.shield.name=Щит
-entity.wizardry.meteor.name=Метеор
-entity.wizardry.blizzard.name=Метель
-entity.wizardry.bubble.name=Пузыри
-entity.wizardry.tornado.name=Торнадо
-entity.wizardry.lightning_hammer.name=Молот Шторма
-entity.wizardry.arrow_rain.name=Дождь Стрел
-entity.wizardry.healing_aura.name=Аура Лечения
-entity.wizardry.forcefield.name=Силовое Поле
-entity.wizardry.ring_of_fire.name=Кольцо Огня
+entity.wizardry:black_hole.name=Чёрная Дыра
+entity.wizardry:shield.name=Щит
+entity.wizardry:meteor.name=Метеор
+entity.wizardry:blizzard.name=Метель
+entity.wizardry:bubble.name=Пузыри
+entity.wizardry:tornado.name=Торнадо
+entity.wizardry:lightning_hammer.name=Молот Шторма
+entity.wizardry:arrow_rain.name=Дождь Стрел
+entity.wizardry:healing_aura.name=Аура Лечения
+entity.wizardry:forcefield.name=Силовое Поле
+entity.wizardry:ring_of_fire.name=Кольцо Огня
 
 item_group.wizardry=Волшебство
 item_group.wizardryspells=Волшебные Заклинания
