--- a/src/main/resources/assets/wizardry/lang/es_MX.lang
+++ b/src/main/resources/assets/wizardry/lang/es_MX.lang
@@ -148,65 +148,65 @@ item.wizardry:spectral_chestplate.name=Pechera Espectral
 item.wizardry:spectral_leggings.name=Grebas Espectrales
 item.wizardry:spectral_boots.name=Botas Espectrales
 
-entity.wizardry.summonedcreature.nameplate=%2$s de %1$s
+entity.wizardry:summonedcreature.nameplate=%2$s de %1$s
 
-entity.wizardry.zombie_minion.name=Zombi
-entity.wizardry.skeleton_minion.name=Esqueleto
-entity.wizardry.spider_minion.name=Arana
-entity.wizardry.blaze_minion.name=Blaze
-entity.wizardry.ice_wraith.name=Espectro de Hielo
-entity.wizardry.lightning_wraith.name=Espectro de Relampago
-entity.wizardry.shadow_wraith.name=Espectro de las Sombras
-entity.wizardry.spirit_wolf.name=Lobo Espiritual
-entity.wizardry.spirit_horse.name=Caballo Espiritual
-entity.wizardry.ice_giant.name=Gigante de Hielo
-entity.wizardry.phoenix.name=Fenix
-entity.wizardry.wizard.name=Mago
-entity.wizardry.magic_slime.name=Slime Magico
-entity.wizardry.silverfish_minion.name=Lepisma
-entity.wizardry.storm_elemental.name=Elemental de Tormenta
-entity.wizardry.evil_wizard.name=Mago Malvado
-entity.wizardry.decoy.name=Senuelo
+entity.wizardry:zombie_minion.name=Zombi
+entity.wizardry:skeleton_minion.name=Esqueleto
+entity.wizardry:spider_minion.name=Arana
+entity.wizardry:blaze_minion.name=Blaze
+entity.wizardry:ice_wraith.name=Espectro de Hielo
+entity.wizardry:lightning_wraith.name=Espectro de Relampago
+entity.wizardry:shadow_wraith.name=Espectro de las Sombras
+entity.wizardry:spirit_wolf.name=Lobo Espiritual
+entity.wizardry:spirit_horse.name=Caballo Espiritual
+entity.wizardry:ice_giant.name=Gigante de Hielo
+entity.wizardry:phoenix.name=Fenix
+entity.wizardry:wizard.name=Mago
+entity.wizardry:magic_slime.name=Slime Magico
+entity.wizardry:silverfish_minion.name=Lepisma
+entity.wizardry:storm_elemental.name=Elemental de Tormenta
+entity.wizardry:evil_wizard.name=Mago Malvado
+entity.wizardry:decoy.name=Senuelo
 
-entity.wizardry.magic_missile.name=Magia
-entity.wizardry.arc.name=Magia
-entity.wizardry.spark_bomb.name=Magia
-entity.wizardry.ice_shard.name=Magia
-entity.wizardry.firebomb.name=Magic
-entity.wizardry.poison_bomb.name=Magia
-entity.wizardry.force_orb.name=Magia
-entity.wizardry.spark.name=Magia
-entity.wizardry.darkness_orb.name=Magia
-entity.wizardry.fire_sigil.name=Magia
-entity.wizardry.frost_sigil.name=Magia
-entity.wizardry.lightning_sigil.name=Magia
-entity.wizardry.lightning_arrow.name=Magia
-entity.wizardry.firebolt.name=Magia
-entity.wizardry.ice_charge.name=Magia
-entity.wizardry.force_arrow.name=Magia
-entity.wizardry.dart.name=Magia
-entity.wizardry.lightning_disc.name=Magia
-entity.wizardry.thunderbolt.name=Magia
-entity.wizardry.decay.name=Magia
-entity.wizardry.ice_lance.name=Magia
-entity.wizardry.smoke_bomb.name=Magia
-entity.wizardry.ice_spike.name=Magia
+entity.wizardry:magic_missile.name=Magia
+entity.wizardry:arc.name=Magia
+entity.wizardry:spark_bomb.name=Magia
+entity.wizardry:ice_shard.name=Magia
+entity.wizardry:firebomb.name=Magic
+entity.wizardry:poison_bomb.name=Magia
+entity.wizardry:force_orb.name=Magia
+entity.wizardry:spark.name=Magia
+entity.wizardry:darkness_orb.name=Magia
+entity.wizardry:fire_sigil.name=Magia
+entity.wizardry:frost_sigil.name=Magia
+entity.wizardry:lightning_sigil.name=Magia
+entity.wizardry:lightning_arrow.name=Magia
+entity.wizardry:firebolt.name=Magia
+entity.wizardry:ice_charge.name=Magia
+entity.wizardry:force_arrow.name=Magia
+entity.wizardry:dart.name=Magia
+entity.wizardry:lightning_disc.name=Magia
+entity.wizardry:thunderbolt.name=Magia
+entity.wizardry:decay.name=Magia
+entity.wizardry:ice_lance.name=Magia
+entity.wizardry:smoke_bomb.name=Magia
+entity.wizardry:ice_spike.name=Magia
 
-entity.wizardry.black_hole.name=Agujero Negro
-entity.wizardry.shield.name=Escudo
-entity.wizardry.meteor.name=Meteoro
-entity.wizardry.blizzard.name=Ventisca
-entity.wizardry.bubble.name=Burbuja
-entity.wizardry.tornado.name=Tornado
-entity.wizardry.lightning_hammer.name=Martillo Relampago
-entity.wizardry.arrow_rain.name=Lluvia de Flechas
-entity.wizardry.healing_aura.name=Aura Curador
-entity.wizardry.forcefield.name=Campo de Fuerza
-entity.wizardry.ring_of_fire.name=Anillo de Fuego
-entity.wizardry.earthquake.name=Terremoto
-entity.wizardry.falling_grass.name=Hierba Descendiente
-entity.wizardry.hailstorm.name=Tormenta de Granizo
-entity.wizardry.lightning_pulse.name=Pulso de Relampago
+entity.wizardry:black_hole.name=Agujero Negro
+entity.wizardry:shield.name=Escudo
+entity.wizardry:meteor.name=Meteoro
+entity.wizardry:blizzard.name=Ventisca
+entity.wizardry:bubble.name=Burbuja
+entity.wizardry:tornado.name=Tornado
+entity.wizardry:lightning_hammer.name=Martillo Relampago
+entity.wizardry:arrow_rain.name=Lluvia de Flechas
+entity.wizardry:healing_aura.name=Aura Curador
+entity.wizardry:forcefield.name=Campo de Fuerza
+entity.wizardry:ring_of_fire.name=Anillo de Fuego
+entity.wizardry:earthquake.name=Terremoto
+entity.wizardry:falling_grass.name=Hierba Descendiente
+entity.wizardry:hailstorm.name=Tormenta de Granizo
+entity.wizardry:lightning_pulse.name=Pulso de Relampago
 
 item_group.wizardry=Wizardry
 item_group.wizardryspells=Hechizos de Wizardry
