--- a/src/main/resources/assets/wizardry/lang/es_mx.lang
+++ b/src/main/resources/assets/wizardry/lang/es_mx.lang
@@ -311,7 +311,7 @@ spell.wizardry:blizzard=Ventisca
 spell.wizardry:bubble=Burbuja
 spell.wizardry:chain_lightning=Cadena de Rayos
 spell.wizardry:clairvoyance=Clarividencia
-spell.wizardry:cobwebs=Telas de Araña
+spell.wizardry:cobwebs=Telas de AraÃ±a
 spell.wizardry:conjure_armour=Conjurar Armadura
 spell.wizardry:conjure_bow=Conjurar Arco
 spell.wizardry:conjure_pickaxe=Conjurar Pico
@@ -412,7 +412,7 @@ spell.wizardry:snare=Trampa
 spell.wizardry:snowball=Bola de Nieve
 spell.wizardry:spark_bomb=Bomba de Chispa
 spell.wizardry:spectral_pathway=Camino Espectral
-spell.wizardry:spider_swarm=Emjambre de Arañas
+spell.wizardry:spider_swarm=Emjambre de AraÃ±as
 spell.wizardry:static_aura=Aura Estatica
 spell.wizardry:summon_blaze=Invocar Blaze
 spell.wizardry:summon_ice_giant=Invocar Gigante de Hielo
@@ -559,7 +559,7 @@ spell.wizardry:static_aura.desc=Rodea al mago de electricidad durante 30 segundo
 spell.wizardry:summon_blaze.desc=Invoca un Blaze que pelea por ti. El blaze desparecera despues de 30 segundos o si es derrotado.
 spell.wizardry:summon_ice_giant.desc="Smash them!"
 spell.wizardry:summon_ice_wraith.desc=Invoca un Espectro de Hielo que pelea por ti. El Espectro de Hielo desparecera despues de 30 segundos o si es derrotado.
-spell.wizardry:summon_iron_golem.desc=Autómata autónomo automatizado automático.
+spell.wizardry:summon_iron_golem.desc=AutÃ³mata autÃ³nomo automatizado automÃ¡tico.
 spell.wizardry:summon_lightning_wraith.desc=Invoca un Espectro de Rayo que pelea por ti. El Espectro de Rayo desparecera despues de 30 segundos o si es derrotado.
 spell.wizardry:summon_phoenix.desc=Desde las cenizas...
 spell.wizardry:summon_shadow_wraith.desc=Invoca un Espectro de las Sombras que pelea por ti.
@@ -568,7 +568,7 @@ spell.wizardry:summon_skeleton_legion.desc="Levantate, Ejercito No-_muerto!"
 spell.wizardry:summon_snow_golem.desc=Crea un Golem de Nieve que pelea por ti. Dura hasta que el golem muera.
 spell.wizardry:summon_spirit_horse.desc=Invoca un Caballo Espectral para que lo montes. El caballo desparecera despues de que dure mucho tiempo sin ser montado o hagas shift-clic derecho con cualquier varita.
 spell.wizardry:summon_spirit_wolf.desc=Invoca un Lobo Espiritual que pelea por ti. El lobo solo desparecera si es matado o haces shift-clic derecho con cualquier varita.
-spell.wizardry:summon_storm_elemental.desc="Elemental de Rayo: Una manifestacion antigua de los elementos, difícilmente puede contener la energía que se agita dentro de el." - Guia del Mago sobre Entidades Arcanas, Volumen I_i
+spell.wizardry:summon_storm_elemental.desc="Elemental de Rayo: Una manifestacion antigua de los elementos, difÃ­cilmente puede contener la energÃ­a que se agita dentro de el." - Guia del Mago sobre Entidades Arcanas, Volumen I_i
 spell.wizardry:summon_wither_skeleton.desc=Invoca un Esqueleto del Wither que pelea por ti. El esqueleto del wither desparecera despues de 30 segundos o si es derrotado.
 spell.wizardry:summon_zombie.desc=Invoca un Zombi que pelea por ti. El zombi desparecera despues de 30 segundos o si es derrotado.
 spell.wizardry:telekinesis.desc=Mueve un item o un objeto pequeno hacia ti si haces clic derecho sobre el bloque. Tambien puede desarmar jugadores.
