--- a/src/main/resources/assets/wizardry/lang/ru_ru.lang
+++ b/src/main/resources/assets/wizardry/lang/ru_ru.lang
@@ -202,7 +202,7 @@ achievement.all_spells.desc=Используйте Каждое Заклинан
 achievement.wizard_trade=Магическая Сделка
 achievement.wizard_trade.desc=Купите Предмет У Волшебника
 achievement.buy_master_spell=Знание-сила
-achievement.buy_master_spell.wizardry:desc=Купите заклинание мастера у волшебника
+achievement.buy_master_spell.desc=Купите заклинание мастера у волшебника
 achievement.freeze_blaze=Не Так Жарко
 achievement.freeze_blaze.desc=Заморозьте Блейза
 achievement.charge_creeper=Это Сейчас Взорвётся
@@ -230,7 +230,7 @@ achievement.slime_skeleton.desc=Захватите скелета слизьне
 achievement.jam_wizard=Помехи
 achievement.jam_wizard.desc=Используйте заклинание магическая глушилка на волшебнике
 achievement.identify_spell=Тайная Экспертиза
-achievement.identify_spell.wizardry:desc=Используйте свиток идентификации для неизвестной книги заклинания или свитка
+achievement.identify_spell.desc=Используйте свиток идентификации для неизвестной книги заклинания или свитка
 achievement.element_master=Мастер Элементов
 achievement.element_master.desc=Используйте все заклинания любого элемента
 achievement.anger_wizard=Ты пожалеешь об этом
